syntax = "proto3";

package checkout_v1;

option go_package = "route256/checkout/pkg/checkout_v1;checkout_v1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";


service CheckoutV1 {
  // Добваляет товар в корзину
  rpc AddToCart(AddToCartRequest) returns(google.protobuf.Empty);
  // Удаляет товар из корзины
  rpc DeleteFromCart(DeleteFromCartRequest) returns (google.protobuf.Empty);
  // Показывает список товаров в корзине
  rpc ListCart(ListCartRequest) returns (ListCartResponse);
  // Оформить заказ по все товарам корзины
  rpc Purchase(PurchaseRequest) returns (PurchaseResponse);
}

message AddToCartRequest {
  int64 user = 1 [json_name = "user", (validate.rules).int64.gt = 0];
  uint32 sku = 2 [json_name = "sku", (validate.rules).uint32.gt = 0];
  uint32 count = 3  [json_name = "count", (validate.rules).uint32.gt = 0];
}

message DeleteFromCartRequest {
  int64 user = 1 [json_name = "user", (validate.rules).int64.gt = 0];
  uint32 sku = 2 [json_name = "sku", (validate.rules).uint32.gt = 0];
  uint32 count = 3  [json_name = "count", (validate.rules).uint32.gt = 0];
}

message ListCartRequest {
  int64 user = 1 [json_name = "user", (validate.rules).int64.gt = 0];
}

message CartItem {
  uint32 sku = 1;
  uint32 count = 2;
  string name = 3;
  uint32 price = 4;
}

message ListCartResponse {
  repeated CartItem items = 1;
  uint32 totalPrice = 2;
}

message PurchaseRequest {
  int64 user = 1 [json_name = "user", (validate.rules).int64.gt = 0];
}

message PurchaseResponse {
  int64 orderID = 1;
}
